--- a/index.html
+++ b/index.html
@@ -1,210 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="assets/gigi.css" />
-    <title>index</title>
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <nav class="navbar navbar-expand-lg navbar-light blabla">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <img class="gigi" src="assets/gigiku.jpg" alt="gigi" />
-            <div
-              class="collapse navbar-collapse"
-              id="bs-example-navbar-collapse-1"
-            >
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Layanan</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Booking</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Testimoni</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Tentang Kami</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="http://example.com"
-                    id="navbarDropdownMenuLink"
-                    data-toggle="dropdown"
-                    >Dropdown link</a
-                  >
-                  <div
-                    class="dropdown-menu"
-                    aria-labelledby="navbarDropdownMenuLink"
-                  >
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                  </div>
-                </li>
-              </ul>
-              <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" />
-                <button class="btn btn-primary my-2 my-sm-0" type="submit">
-                  Search
-                </button>
-              </form>
-              <ul class="navbar-nav ml-md-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#"
-                    >Link <span class="sr-only">(current)</span></a
-                  >
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="http://example.com"
-                    id="navbarDropdownMenuLink"
-                    data-toggle="dropdown"
-                    >Dropdown link</a
-                  >
-                  <div
-                    class="dropdown-menu dropdown-menu-right"
-                    aria-labelledby="navbarDropdownMenuLink"
-                  >
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </nav>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/gigi.css" />
+  <title>index</title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-light blabla">
+          <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <img class="gigi" src="assets/image/gigiku.jpg " alt="gigi" />
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Layanan</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Booking</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Testimoni</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tentang Kami</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+                  data-toggle="dropdown">Dropdown link</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </li>
+            </ul>
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="text" />
+              <button class="btn btn-primary my-2 my-sm-0" type="submit">
+                Search
+              </button>
+            </form>
+            <ul class="navbar-nav ml-md-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+                  data-toggle="dropdown">Dropdown link</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <h3>Klinik Gigi Sejahtera - Jakarta Timur</h3>
+        <p>
+          Klinik gigi adalah tempat dimana seorang dokter gigi bekerja untuk
+          pasien dengan masalah kerusakan gigi. Ini adalah rumah sakit untuk
+          masalah gigi. <br />
+          Di sini para dokter tersedia di klinik untuk perawatan Anda dan
+          memberi Anda perawatan terbaik. Kedokteran gigi (obat gigi dan
+          mulut) juga tersedia. Klinik gigi dapat bersifat pribadi atau
+          bergantung pada institusi. Di klinik gigi, tim dokter gigi terdiri
+          dari asisten gigi, ahli kesehatan gigi, teknisi gigi, dan terapis
+          gigi.
+        </p>
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Layanan</h2>
+            <p>
+              Donec id elit non mi porta gravida at eget metus. Fusce dapibus,
+              tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+              fermentum massa justo sit amet risus. Etiam porta sem malesuada
+              magna mollis euismod. Donec sed odio dui.
+            </p>
+            <p>
+              <a class="btn" href="#">View details »</a>
+            </p>
+          </div>
+          <div class="col-md-6">
+            <h2>Jadwal Praktik</h2>
+            <p>
+              Donec id elit non mi porta gravida at eget metus. Fusce dapibus,
+              tellus ac cursus commodo, tortor mauris condimentum nibh, ut
+              fermentum massa justo sit amet risus. Etiam porta sem malesuada
+              magna mollis euismod. Donec sed odio dui.
+            </p>
+            <p>
+              <a class="btn" href="#">View details »</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 kita">
+            <img alt="Bootstrap Image Preview" src="assets/image/bimo.jpeg" />
+            <h5>Dr. Bimo Yudha Utama</h5>
+          </div>
+          <div class="col-md-3 kita">
+            <img alt="Bootstrap Image Preview" src="assets/image/feni.jpeg" />
+            <h5>Dr. Feni Fitriani</h5>
+          </div>
+          <div class="col-md-3 kita">
+            <img alt="Bootstrap Image Preview" src="assets/image/abrar.jpeg" />
+            <h5>Dr. M. Abrar Al Arkan</h5>
+          </div>
+          <div class="col-md-3 kita">
+            <img alt="Bootstrap Image Preview" src="assets/image/hibban.jpeg" />
+            <h5>Dr. Hibban An Nafi Maulidan</h5>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-8">
-          <h3>Klinik Gigi Sejahtera - Jakarta Timur</h3>
-          <p>
-            Klinik gigi adalah tempat dimana seorang dokter gigi bekerja untuk
-            pasien dengan masalah kerusakan gigi. Ini adalah rumah sakit untuk
-            masalah gigi. <br />
-            Di sini para dokter tersedia di klinik untuk perawatan Anda dan
-            memberi Anda perawatan terbaik. Kedokteran gigi (obat gigi dan
-            mulut) juga tersedia. Klinik gigi dapat bersifat pribadi atau
-            bergantung pada institusi. Di klinik gigi, tim dokter gigi terdiri
-            dari asisten gigi, ahli kesehatan gigi, teknisi gigi, dan terapis
-            gigi.
-          </p>
-          <div class="row">
-            <div class="col-md-6">
-              <h2>Layanan</h2>
-              <p>
-                Donec id elit non mi porta gravida at eget metus. Fusce dapibus,
-                tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                magna mollis euismod. Donec sed odio dui.
-              </p>
-              <p>
-                <a class="btn" href="#">View details »</a>
-              </p>
-            </div>
-            <div class="col-md-6">
-              <h2>Jadwal Praktik</h2>
-              <p>
-                Donec id elit non mi porta gravida at eget metus. Fusce dapibus,
-                tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                magna mollis euismod. Donec sed odio dui.
-              </p>
-              <p>
-                <a class="btn" href="#">View details »</a>
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3 kita">
-              <img alt="Bootstrap Image Preview" src="assets/image/bimo.jpeg" />
-              <h5>Dr. Bimo Yudha Utama</h5>
-            </div>
-            <div class="col-md-3 kita">
-              <img alt="Bootstrap Image Preview" src="assets/image/feni.jpeg" />
-              <h5>Dr. Feni Fitriani</h5>
-            </div>
-            <div class="col-md-3 kita">
-              <img
-                alt="Bootstrap Image Preview"
-                src="assets/image/abrar.jpeg"
-              />
-              <h5>Dr. M. Abrar Al Arkan</h5>
-            </div>
-            <div class="col-md-3 kita">
-              <img
-                alt="Bootstrap Image Preview"
-                src="assets/image/hibban.jpeg"
-              />
-              <h5>Dr. Hibban An Nafi Maulidan</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active"
-              >Link Akses Cepat</a
-            >
-            <div class="list-group-item">Layanan</div>
-            <div class="list-group-item">Jadwal</div>
-            <div class="list-group-item">Dokter Kami</div>
-          </div>
+      <div class="col-md-4">
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-action active">Link Akses Cepat</a>
+          <div class="list-group-item">Layanan</div>
+          <div class="list-group-item">Jadwal</div>
+          <div class="list-group-item">Dokter Kami</div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
