--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
             data-target="#bs-example-navbar-collapse-1">
             <span class="navbar-toggler-icon"></span>
           </button>
-<<<<<<< HEAD
-          <img class="gigi" src="assets/image/gigiku.jpg" alt="gigi" />
-=======
           <img class="gigi" src="assets/image/gigiku.jpg " alt="gigi" />
->>>>>>> c09c3adb8b9104364f77690c03f6dc2c448f59f8
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -64,22 +60,10 @@
             </form>
             <ul class="navbar-nav ml-md-auto">
               <li class="nav-item active">
-<<<<<<< HEAD
-                <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
-=======
                 <a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
->>>>>>> c09c3adb8b9104364f77690c03f6dc2c448f59f8
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
-                  data-toggle="dropdown">Dropdown link</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Separated link</a>
-                </div>
+              <li class="nav-item active">
+                <a class="nav-link" href="register.html">Register<span class="sr-only">(current)</span></a>
               </li>
             </ul>
           </div>
