--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             </form>
             <ul class="navbar-nav ml-md-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+                <a class="nav-link bb" href="login.html">Login<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item active bb">
                 <a class="nav-link" href="register.html">Register<span class="sr-only">(current)</span></a>
               </li>
             </ul>
