--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Home</title>
+  <title>Home | Gigi Sejahterah</title>
 
   <!--== Favicon ==-->
   <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
